# mood-thieves

./: .gitignore  CMakeLists.txt  README.md
include/mood_thieves/: mood_thieves.hpp  utils.hpp
src/: main.cpp  mood_thieves.cpp  utils.cpp
